# models/User.py
@@ -15,7 +15,7 @@ class User(db.Model):
         self.password = generate_password_hash(password)
 
     def check_password (self, password):
-        return check_password_hash(password)
+        return check_password_hash(self.password, password)
         
     def to_dict(self):
         return {
